# TestCase-Refactor-and-CI

./: README.md  pyproject.toml
src/: assignment_lists_solutions.py
src/work/: assignment_lists_solutions.py
test/: linkedList_test
tests/: test_linked_list.py
