[tool.poetry]
name = "testingci"
version = "0.1.0"
description = "testing and ci"
authors = ["Taazkir"]
readme = "README.md"
packages = [
    { include = "src/assignment_lists_solutions.py" },
    { include = "tests/test_linked_list.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
